--- a/Project/docker-compose.yml
+++ b/Project/docker-compose.yml
@@ -10,12 +10,15 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - 88:80 
+      - 88:80
+      - 881:443
     links:
       - 'php'
     volumes:
       - './:/var/www/html'
       - './docker/nginx:/etc/nginx/conf.d'
+      - '.docker/nginxcert/cert.crt:/etc/nginx/cert.crt'
+      - '.docker/nginxcert/cert.key:/etc/nginx/cert.key'
     depends_on:
       - php
 
